--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -7,6 +7,8 @@
 <title>Additional contacts</title>
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <style>
 .blue-button {
 	background: #25A6E1;
@@ -29,7 +31,6 @@ th {
 
 td, th {
 	border: 1px solid gray;
-	width: 25%;
 	text-align: left;
 	padding: 5px 10px;
 }
@@ -46,56 +47,71 @@ td, th {
 </head>
 <body>
 	<div class="container">
-			<form th:action="@{/addContact}" th:object="${contact}" method="POST">
-				<table border="0" class="table">
-					<tr>
-						<th colspan="2">Add Contact</th>
-					</tr>
-					<tr hidden>
-						<td>Id:</td>
-						<td><input type="text" th:field="*{id}" /></td>
-					</tr>
-
-					<tr>
-						<td>Contact Name:</td>
-						<td><input class="td-input" type="text" th:field="*{name}" />
-							<div class="alert alert-warning"
-								th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div></td>
-					</tr>
-
-					<tr>
-						<td>Phone number:</td>
-						<td><input class="td-input" type="text" th:field="*{phoneNumber}" />
-							<div class="alert alert-warning"
-								th:if="${#fields.hasErrors('phoneNumber')}"
-								th:errors="*{phoneNumber}"></div></td>
-					</tr>
-					<tr>
-						<td colspan="2"><input type="submit" class="blue-button" /></td>
-					</tr>
-				</table>
-			</form>
-			</br>
-
-
-
-			<h3>Contact List</h3>
-			<table class="table">
+		<form th:action="@{/addContact}" th:object="${contact}" method="POST">
+			<table border="0" class="table">
 				<tr>
-					<th width="120">Contact Name</th>
-					<th width="120">Phone number</th>
-					<th width="60">Edit</th>
-					<th width="60">Delete</th>
+					<th colspan="2">Add Contact</th>
 				</tr>
-				<tr th:each="contact : ${listOfContacts}">
-					<td th:utext="${contact.name}">...</td>
-					<td th:utext="${contact.phoneNumber}">...</td>
-					<td><a th:href="@{/updateContact/{id}(id=${contact.id})}"
-						th:utext="${contact.id}">Edit</a></td>
-					<td><a th:href="@{/deleteContact/{id}(id=${contact.id})}"
-						th:utext="${contact.id}">Delete</a></td>
+				<tr hidden>
+					<td>Id:</td>
+					<td><input type="text" th:field="*{id}" /></td>
+				</tr>
+
+				<tr>
+					<td>Contact Name:</td>
+					<td><input class="td-input" type="text" th:field="*{name}" />
+						<span class="error"
+							th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span></td>
+				</tr>
+
+				<tr>
+					<td>Phone number:</td>
+					<td><input class="td-input" type="text"
+						th:field="*{phoneNumber}" />
+						<span class="error"
+							th:if="${#fields.hasErrors('phoneNumber')}"
+							th:errors="*{phoneNumber}"></span></td>
+				</tr>
+				<tr>
+					<td colspan="2"><input type="submit" class="blue-button" /></td>
 				</tr>
 			</table>
+		</form>
+
+
+
+		
+		<form th:action="@{/search}" method="get">
+			<h3>Contact List</h3>
+			<div class="input-group">
+				
+				<input type="text" class="form-control" name="keyword"
+					th:value="${keyword}" placeholder="Find by contact name or number"
+					size="50">
+				<div class="input-group-btn">
+					<button class="btn btn-default" type="submit">
+						<i class="glyphicon glyphicon-search"></i>
+					</button>
+				</div>
+			</div>
+		</form>
+		</br>
+		<table class="table">
+			<tr>
+				<th width="5%">Edit</th>
+				<th width="50%">Contact Name</th>
+				<th width="40%">Phone number</th>
+				<th width="5%">Delete</th>
+			</tr>
+			<tr th:each="contact : ${listOfContacts}">
+				<td><a th:href="@{/updateContact/{id}(id=${contact.id})}"><i
+						class="glyphicon glyphicon-pencil"></i></a></td>
+				<td th:utext="${contact.name}">...</td>
+				<td th:utext="${contact.phoneNumber}">...</td>
+				<td><a th:href="@{/deleteContact/{id}(id=${contact.id})}"><i
+						class="glyphicon glyphicon-remove"></i></a></td>
+			</tr>
+		</table>
 
 	</div>
 </body>
